recursion.lessons.recursion.tree.Tree.scala.error
Tree:11: error: value recule is not a member of Unit
gauche(2*angle)recule
               ^